--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   path_provider: ^2.1.1
   dio: ^5.3.2
   flutter_file_downloader: ^1.1.2
+  agora_rtc_engine: ^6.2.2
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
