--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,13 @@ dependencies:
   firebase_storage: ^11.2.6
   lottie: ^2.6.0
   animations: ^2.0.8
-  icon_forest: ^1.1.8
   gallery_saver: ^2.3.2
   path_provider: ^2.1.1
   dio: ^5.3.2
   flutter_file_downloader: ^1.1.2
-  agora_rtc_engine: ^6.2.2
   permission_handler: ^10.4.3
+  http: ^0.13.6
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
