adding emoji package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   http: ^0.13.6
   share_plus: ^7.1.0
   image_cropper: ^4.0.1
+  emoji_picker_flutter: ^1.6.1
 
 dev_dependencies:
   flutter_test:
