--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:855481836695:ios:88c8ed2118b60ff02df5d2",
-  "FIREBASE_PROJECT_ID": "telegram-app-ed069",
-  "GCM_SENDER_ID": "855481836695"
+  "GOOGLE_APP_ID": "1:842967052996:ios:5768614c42649759bd4f91",
+  "FIREBASE_PROJECT_ID": "elbekgram",
+  "GCM_SENDER_ID": "842967052996"
 }
