--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,15 @@ dependencies:
   path_provider: ^2.1.1
   dio: ^5.3.2
   flutter_file_downloader: ^1.1.2
-  permission_handler: ^10.4.3
+  permission_handler: ^11.0.0
   http: ^0.13.6
   share_plus: ^7.1.0
   image_cropper: ^4.0.1
   emoji_picker_flutter: ^1.6.1
   intl: ^0.18.1
+  firebase_dynamic_links: ^5.3.5
+  url_launcher: ^6.1.14
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   flutter_test:
