--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,11 @@ dependencies:
   firebase_messaging: ^14.6.7
   device_info_plus: ^9.0.3
   geolocator: ^10.0.1
+  flutter_notification_channel: ^2.0.0
+  agora_rtc_engine: ^6.2.2
+  get: ^4.6.6
+  blur: ^3.1.0
+  camera: ^0.10.5+4
 
 dev_dependencies:
   flutter_test:
